--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+server.compression.enabled=true
+server.compression.mime-types=application/json
+server.compression.min-response-size=1024
