--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=demo
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql-db
-#spring.datasource.url=jdbc:mysql://case-mysqldb:3306/mysql-db
+#spring.datasource.url=jdbc:mysql://localhost:3306/mysql-db
+spring.datasource.url=jdbc:mysql://mysqldb:3306/mysql-db
+
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
