--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,14 @@ spring.datasource.url=jdbc:mysql://mysqldb:3306/mysql-db
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 server.compression.enabled=true
 server.compression.mime-types=application/json
 server.compression.min-response-size=1024
+
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.generate_statistics=false
